# lms-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_pytest.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff_out.txt  test_out.txt  test_results.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 554b841513e5_add_failed_tasks_table.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  logging.py  redis.py  security.py  tasks.py
app/crud/: __init__.py  base.py  crud_course.py  crud_enrollment.py  crud_instructor.py  crud_role.py  crud_user.py
app/db/: base.py  mixins.py  session.py
app/middleware/: RequestLoggingMiddleware.py
app/models/: __init__.py  course.py  failed_task.py  user.py
app/schemas/: __init__.py  advanced.py  course.py  failed_task.py  user.py
app/services/: admin_service.py  advanced_service.py  auth_service.py  category_service.py  course_service.py  email_service.py  enrollment_service.py  instructor_service.py  (+4 more)
docs/: INT_cache.md  INT_ci_cd.md  INT_docker.md  INT_jwt_auth.md  INT_lifecycle.md  INT_logging.md  INT_pytest.md  INT_sqlalchemy.md  INT_traefik.md  backend_coding_part2.md  backend_coding_part3.md  backend_coding_questions.md  backend_interview_prep.md  comprehensive_interview_guide.md  endpoints_full_flow.md  interview_advanced_examples.md  jwt_auth.md  logging_system.md  questions_answers.md  rbac.md  redis_integration.md  revision_cache_jwt_logger.md  revision_guide.md  s3_storage_integration.md  smtp_email_system.md
tests/: conftest.py
(+33 files in other folders)
